examples/test/testpolicy440.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy440
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key35: value38
      key12: value6
      key16: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value25
          key26: value45
      podSelector:
        matchLabels:
          key4: value31
          key39: value9
          key13: value36
